# perspectra

./: .coveragerc  .dockerignore  .env.dev  .flake8  .gitignore  .isort.cfg  Dockerfile  Dockerfile.debug  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  OPTIMIZATION_GUIDE.md  PERFORMANCE_GUIDE.md  README.md  benchmark_models.py  conda.yaml  dev-requirements.txt  docker-compose.debug.yml  example_usage.py  fast_background_removal.py  final_integration_test.py  performance_analysis.py  publish_to_pypi.py  pyproject.toml  requirements.txt  setup.py  setup_library.py  simple_performance_demo.py  test_all_methods.py  test_library.py  test_ultra_fast.py  usage_examples.py  user_demo.py
perspectra_lib/: __init__.py
perspectra_lib/adapters/: __init__.py  background_removal.py  optimized_background_removal.py  perspective_correction.py  ultrafast_background_removal.py
perspectra_lib/core/: config.py  processor.py
src/: main.py
src/api/adapters/: health_adapter.py  perspective_adapter.py  remove_background_adapter.py
src/api/routers/: health_router.py  perspectra_router.py
src/api/services/: health_service.py  perspectra_service.py
src/models/: health.py  requests.py  responses.py
