[project]
name = "perspectra"
version = "0.1.0"
description = "An API service for image background removal and processing."
authors = [
    { name = "Durmuş Ali Öztürk", email = "durmusdali.dali@gmail.com"}
]
license = "MIT"
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.pytest.ini_options]
python_path = [".", "src"]


[tool.setuptools]
package-dir = {"" = "."}